--- a/index.html
+++ b/index.html
@@ -56,12 +56,18 @@
                     </li>
                 </ul>
             </nav>
-                <div class="toggle-theme nav-logo">
+                <!-- <div class="toggle-theme nav-logo">
                     <button class="theme-toggle" id="toggleTheme">
-                        <!-- <img src="./assets/moon.png" alt="Theme toggle" id="theme-png"> -->
+                         <img src="./assets/moon.png" alt="Theme toggle" id="theme-png"> 
                          click
                     </button>
-                </div>
+                </div> -->
+                <div class="switch-wrapper">
+                    <label class="switch">
+                    <input type="checkbox" id="themeSwitch">
+                    <span class="slider"></span>
+                     </label>
+                 </div>
         </header>
         <main class="main">
             <section class="home-section">
