--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
                 <div class="home-container">
                     <div class="home-content">
                         <div class="home-social">
-                            <span><a href="" class="home-social-icon" id="insta"><i class="fa-brands fa-instagram"></i></a></span>
-                            <a href="" class="home-social-icon" id="linkedin"><i class="fa-brands fa-linkedin"></i></a>
-                            <a href="" class="home-social-icon" id="github"><i class="fa-brands fa-github"></i></a>
+                            <span><a href="https://www.instagram.com/lokeshazad10" class="home-social-icon" id="insta" target="_blank"><i class="fa-brands fa-instagram"></i></a></span>
+                            <a href="https://www.linkedin.com/in/lokeshazad10" class="home-social-icon" id="linkedin" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                            <a href="https://www.github.com/lokeshazad10" class="home-social-icon" id="github" target="_blank"><i class="fa-brands fa-github"></i></a>
                         </div>
                         <div class="home-data">
                             <h1 class="home-tittle" data-text="Lokesh Azad">Lokesh Azad </h1><span style="color: none;">🔥</span>
@@ -338,15 +338,15 @@
                         <form action="" class="contact-form" id="contact-form">
                             <div class="contact-form-div">
                                 <label for="" class="contact-form-tag">Name</label>
-                                <input type="text" class="contact-form-input" placeholder="Enter Your Name" name="name">
+                                <input type="text" class="contact-form-input" placeholder="Enter Your Name" name="name" required>
                             </div>
                             <div class="contact-form-div">
                                 <label for="" class="contact-form-tag">Email</label>
-                                <input type="text" class="contact-form-input" placeholder="Enter Your Email" name="Email">
+                                <input type="text" class="contact-form-input" placeholder="Enter Your Email" name="Email" required>
                             </div>
                             <div class="contact-form-div contact-form-area">
                                 <label for="" class="contact-form-tag">Message</label>
-                                <textarea name="message" cols="30" rows="10" class="contact-form-input" placeholder="Send a message to get started."></textarea>
+                                <textarea name="message" cols="30" rows="10" class="contact-form-input" placeholder="Send a message to get started." required></textarea>
                             </div>
                             <button class="contact-form-btn btn" type="submit">Send Message <i class="fa-solid fa-paper-plane"></i></button>
                         </form>
@@ -363,9 +363,9 @@
                     <li><a href="#skill">Skills</a></li>
                 </ul>
                 <div class="footer-social">
-                    <span><a href="" target="_blank" class="home-social-icon footer-icon" id="insta"><i class="fa-brands fa-instagram"></i></a></span>
-                    <a href="" target="_blank" class="home-social-icon footer-icon" id="linkedin"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="" target="_blank" class="home-social-icon footer-icon" id="github"><i class="fa-brands fa-github"></i></a>
+                    <span><a href="https://www.instagram.com/lokeshazad10" target="_blank" class="home-social-icon footer-icon" id="insta"><i class="fa-brands fa-instagram"></i></a></span>
+                    <a href="https://www.linkedin.com/in/lokeshazad10" target="_blank" class="home-social-icon footer-icon" id="linkedin"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://www.github.com/lokeshazad10" target="_blank" class="home-social-icon footer-icon" id="github"><i class="fa-brands fa-github"></i></a>
                 </div>
                 <span class="footer-copy">© Lokesh Azad. All rigths reserved</span>
             </div>
@@ -373,8 +373,6 @@
     </div>
 
     <script src="./js files/theme-toggle.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js" integrity="sha512-NcZdtrT77bJr4STcmsGAESr06BYGE8woZdSdEgqnpyqac7sugNO+Tr4bGwGF3MsnEkGKhU2KL2xh6Ec+BqsaHA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="./js files/scramble-text.js"></script> -->
     <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
 </script>
