made responsive for some more devices

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <div id="main-box">
         
         <header id="header">
-            <a href="./index.html" class="nav-logo dis-none" data-text="Lokesh Azad"> <img src="./assets/favicon.ico" alt="logo"> Lokesh Azad</a>
+            <a href="./index.html" class="nav-logo dis-none" data-text="Lokesh Azad"> <img src="./assets/favicon.ico" alt="logo"> 
+                <span class="logo-text">Lokesh Azad</span>
+            </a>
             <nav id="navbar">
                 <ul>
                     <li class="nav-list">
