--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,20 +8,24 @@
     <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
 
     <!-- font-awesome -->
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
     <!-- css file -->
-     <link rel="stylesheet" href="./style.css">
-     <link rel="stylesheet" href="./css files/floating.css">
-     <!-- <link rel="stylesheet" href="./css files/theme-toggle.css"> -->
-    <link rel="stylesheet" href="./css files/responsive.css">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./stylesheets/floating.css">
+    <!-- <link rel="stylesheet" href="./css files/theme-toggle.css"> -->
+    <link rel="stylesheet" href="./stylesheets/responsive.css">
 </head>
+
 <body>
     <div id="main-box">
-        
+
         <header id="header">
-            <a href="./index.html" class="nav-logo dis-none" data-text="Lokesh Azad"> <img src="./assets/favicon.ico" alt="logo"> 
+            <a href="./index.html" class="nav-logo dis-none" data-text="Lokesh Azad"> <img src="./assets/favicon.ico"
+                    alt="logo">
                 <span class="logo-text">Lokesh Azad</span>
             </a>
             <nav id="navbar">
@@ -57,29 +62,35 @@
                     </li>
                 </ul>
             </nav>
-                <div class="switch-wrapper">
-                    <label class="switch">
+            <div class="switch-wrapper">
+                <label class="switch">
                     <input type="checkbox" id="themeSwitch">
                     <span class="slider"></span>
-                    </label>
-                 </div>
+                </label>
+            </div>
         </header>
         <main class="main">
             <section class="home-section">
                 <div class="home-container">
                     <div class="home-content">
                         <div class="home-social">
-                            <span><a href="https://www.instagram.com/lokeshazad10" class="home-social-icon" id="insta" target="_blank"><i class="fa-brands fa-instagram"></i></a></span>
-                            <a href="https://www.linkedin.com/in/lokeshazad10" class="home-social-icon" id="linkedin" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-                            <a href="https://www.github.com/lokeshazad10" class="home-social-icon" id="github" target="_blank"><i class="fa-brands fa-github"></i></a>
+                            <span><a href="https://www.instagram.com/lokeshazad10" class="home-social-icon" id="insta"
+                                    target="_blank"><i class="fa-brands fa-instagram"></i></a></span>
+                            <a href="https://www.linkedin.com/in/lokeshazad10" class="home-social-icon" id="linkedin"
+                                target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                            <a href="https://www.github.com/lokeshazad10" class="home-social-icon" id="github"
+                                target="_blank"><i class="fa-brands fa-github"></i></a>
                         </div>
                         <div class="home-data">
-                            <h1 class="home-tittle" data-text="Lokesh Azad">Lokesh Azad </h1><span style="color: none;">🔥</span>
+                            <h1 class="home-tittle" data-text="Lokesh Azad">Lokesh Azad </h1><span
+                                style="color: none;">🔥</span>
                             <h3 class="home-subtittle">Web Developer</h3>
                             <p class="home-desc">
-                                I'm a creative developer based in Bhatapara C.G., and I'm very passionate and dedicated to my work.
+                                I'm a creative developer based in Bhatapara C.G., and I'm very passionate and dedicated
+                                to my work.
                             </p>
-                            <button onclick="sendMessage()" class="hello-btn">Say Hello <i class="fa-solid fa-paper-plane"></i></button>
+                            <button onclick="sendMessage()" class="hello-btn">Say Hello <i
+                                    class="fa-solid fa-paper-plane"></i></button>
                         </div>
                         <div class="home-wrapper">
                             <div class="home-image">
@@ -95,35 +106,63 @@
                 <div>
                     <div class="work-container">
                         <div class="work-card">
-                            <img src="./assets/sample.png" alt="Work image" class="work-img" >
-                            <h3 class="work-title">Project Name</h3>
-                            <div class="work-link">
-                                <a href="">Visit <i class="fa-solid fa-square-arrow-up-right fa-bounce"></i></a>
-                                <a href="">Source <i class="fa-brands fa-github"></i></a>
+                            <img src="./assets/project-images/Quiz-App.png" alt="Work image" class="work-img">
+                            <div class="project-details">
+                                <h3 class="work-title">Quiz App</h3>
+                                <div class="work-link">
+                                    <a href="https://lokeshazad10.github.io/Quiz-App-Game/" target="_blank">Visit <i
+                                            class="fa-solid fa-square-arrow-up-right fa-bounce"></i></a>
+                                    <a href="https://github.com/lokeshazad10/Quiz-App-Game" target="_blank">Source <i
+                                            class="fa-brands fa-github"></i></a>
+                                </div>
                             </div>
                         </div>
                         <div class="work-card">
-                            <img src="./assets/sample.png" alt="Work image" class="work-img" >
-                            <h3 class="work-title">Project Name</h3>
-                            <div class="work-link">
-                                <a href="">Visit <i class="fa-solid fa-square-arrow-up-right fa-bounce"></i></a>
-                                <a href="">Source <i class="fa-brands fa-github"></i></a>
+                            <img src="./assets/project-images/TTT-project.png" alt="Work image" class="work-img">
+                            <div class="project-details">
+                                <h3 class="work-title">Tic Tac Toe</h3>
+                                <div class="work-link">
+                                    <a href="https://lokeshazad10.github.io/Tic-Tac-Toe-game/" target="_blank">Visit <i
+                                            class="fa-solid fa-square-arrow-up-right fa-bounce"></i></a>
+                                    <a href="https://github.com/lokeshazad10/Tic-Tac-Toe-game" target="_blank">Source <i
+                                            class="fa-brands fa-github"></i></a>
+                                </div>
                             </div>
                         </div>
                         <div class="work-card">
-                            <img src="./assets/sample.png" alt="Work image" class="work-img" >
-                            <h3 class="work-title">Project Name</h3>
-                            <div class="work-link">
-                                <a href="">Visit <i class="fa-solid fa-square-arrow-up-right fa-bounce"></i></a>
-                                <a href="">Source <i class="fa-brands fa-github"></i></a>
+                            <img src="./assets/project-images/RPS-project.png" alt="Work image" class="work-img">
+                            <div class="project-details">
+                                <h3 class="work-title">Rock Paper Scissors</h3>
+                                <div class="work-link">
+                                    <a href="https://rockpaperscissors-bylokesh.netlify.app/" target="_blank">Visit <i
+                                            class="fa-solid fa-square-arrow-up-right fa-bounce"></i></a>
+                                    <a href="https://github.com/lokeshazad10/Rock-Paper-Scissors-Game"
+                                        target="_blank">Source <i class="fa-brands fa-github"></i></a>
+                                </div>
                             </div>
                         </div>
                         <div class="work-card">
-                            <img src="./assets/sample.png" alt="Work image" class="work-img" >
-                            <h3 class="work-title">Project Name</h3>
-                            <div class="work-link">
-                                <a href="">Visit <i class="fa-solid fa-square-arrow-up-right fa-bounce"></i></a>
-                                <a href="">Source <i class="fa-brands fa-github"></i></a>
+                            <img src="./assets/project-images/calc-project.png" alt="Work image" class="work-img">
+                            <div class="project-details">
+                                <h3 class="work-title">Simple Calculator</h3>
+                                <div class="work-link">
+                                    <a href="https://simple-calculator-bylokesh.netlify.app/" target="_blank">Visit <i
+                                            class="fa-solid fa-square-arrow-up-right fa-bounce"></i></a>
+                                    <a href="https://github.com/lokeshazad10/Calculator" target="_blank">Source <i
+                                            class="fa-brands fa-github"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="work-card">
+                            <img src="./assets/project-images/TDL-project.png" alt="Work image" class="work-img">
+                            <div class="project-details">
+                                <h3 class="work-title">To-Do List</h3>
+                                <div class="work-link">
+                                    <a href="https://to-do-lisstt.netlify.app/" target="_blank">Visit <i
+                                            class="fa-solid fa-square-arrow-up-right fa-bounce"></i></a>
+                                    <a href="https://github.com/lokeshazad10/To-Do-List-by-Lokesh-Azad"
+                                        target="_blank">Source <i class="fa-brands fa-github"></i></a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -165,7 +204,7 @@
                                         <span class="skill-level">Basic</span>
                                     </div>
                                 </div>
-                                
+
                             </div>
                             <div class="skills-group">
                                 <div class="skill-data">
@@ -253,7 +292,8 @@
                             <div class="qualification-data">
                                 <div>
                                     <h3 class="qualification-title">Bachelor of Computer Science 🎓</h3>
-                                    <span class="qualification-subtitle">Atal Bihari Vajpayee University - Bilaspur</span>
+                                    <span class="qualification-subtitle">Atal Bihari Vajpayee University -
+                                        Bilaspur</span>
                                     <div class="qualification-calender">
                                         <i class="fa-solid fa-calendar-days"></i>
                                         2023 - 2026
@@ -278,7 +318,7 @@
                                 </div>
                             </div>
                         </div>
-                  </div>
+                    </div>
                 </div>
             </section>
             <section class="about-section" id="about">
@@ -305,7 +345,9 @@
                             </div>
                         </div>
                         <p class="about-description">
-                            Frontend Developer, I create web pages with UI / UX user interface, I create web pages with the skill set including HTML, CSS, JavaScript, and React, I have the tools to bring any website vision to life.
+                            Frontend Developer, I create web pages with UI / UX user interface, I create web pages with
+                            the skill set including HTML, CSS, JavaScript, and React, I have the tools to bring any
+                            website vision to life.
                         </p>
                         <a href="#" class="cv-btn btn">Download CV <i class="fa-solid fa-file"></i></a>
                     </div>
@@ -314,7 +356,7 @@
             <section class="contact-section" id="contact">
                 <h2 class="section-title">Get in Touch 📩</h2>
                 <span class="section-subtitle">
-                    Ready to get started on your project?<br/>
+                    Ready to get started on your project?<br />
                     Contact me now for a Free consultation.
                 </span>
                 <div class="contact-container">
@@ -325,13 +367,15 @@
                                 <i class="fa-solid fa-envelope chi"></i>
                                 <h3 class="contact-card-title">Email</h3>
                                 <span class="contact-card-data">lokeshazad10@gmail.com</span>
-                                <a href="mailto:lokeshazad10@gmail.com" class="contact-btn">Write me <i class="fa-solid fa-arrow-right"></i></a>
+                                <a href="mailto:lokeshazad10@gmail.com" class="contact-btn">Write me <i
+                                        class="fa-solid fa-arrow-right"></i></a>
                             </div>
                             <div class="contact-card">
                                 <i class="fa-brands fa-whatsapp chi"></i>
                                 <h3 class="contact-card-title">Whatsapp</h3>
                                 <span class="contact-card-data">(+91) 9343792826</span>
-                                <a href="https://api.whatsapp.com/send?phone=9343792826&text=Hello,%20I%20would%20like%20to%20connect%20with%20you!" class="contact-btn">Write me <i class="fa-solid fa-arrow-right"></i></a>
+                                <a href="https://api.whatsapp.com/send?phone=9343792826&text=Hello,%20I%20would%20like%20to%20connect%20with%20you!"
+                                    class="contact-btn">Write me <i class="fa-solid fa-arrow-right"></i></a>
                             </div>
                         </div>
                     </div>
@@ -340,17 +384,21 @@
                         <form action="" class="contact-form" id="contact-form">
                             <div class="contact-form-div">
                                 <label for="" class="contact-form-tag">Name</label>
-                                <input type="text" class="contact-form-input" placeholder="Enter Your Name" name="name" required>
+                                <input type="text" class="contact-form-input" placeholder="Enter Your Name" name="name"
+                                    required>
                             </div>
                             <div class="contact-form-div">
                                 <label for="" class="contact-form-tag">Email</label>
-                                <input type="text" class="contact-form-input" placeholder="Enter Your Email" name="Email" required>
+                                <input type="text" class="contact-form-input" placeholder="Enter Your Email"
+                                    name="Email" required>
                             </div>
                             <div class="contact-form-div contact-form-area">
                                 <label for="" class="contact-form-tag">Message</label>
-                                <textarea name="message" cols="30" rows="10" class="contact-form-input" placeholder="Send a message to get started." required></textarea>
+                                <textarea name="message" cols="30" rows="10" class="contact-form-input"
+                                    placeholder="Send a message to get started." required></textarea>
                             </div>
-                            <button class="contact-form-btn btn" type="submit">Send Message <i class="fa-solid fa-paper-plane"></i></button>
+                            <button class="contact-form-btn btn" type="submit">Send Message <i
+                                    class="fa-solid fa-paper-plane"></i></button>
                         </form>
                     </div>
                 </div>
@@ -365,27 +413,31 @@
                     <li><a href="#skill">Skills</a></li>
                 </ul>
                 <div class="footer-social">
-                    <span><a href="https://www.instagram.com/lokeshazad10" target="_blank" class="home-social-icon footer-icon" id="insta"><i class="fa-brands fa-instagram"></i></a></span>
-                    <a href="https://www.linkedin.com/in/lokeshazad10" target="_blank" class="home-social-icon footer-icon" id="linkedin"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="https://www.github.com/lokeshazad10" target="_blank" class="home-social-icon footer-icon" id="github"><i class="fa-brands fa-github"></i></a>
+                    <span><a href="https://www.instagram.com/lokeshazad10" target="_blank"
+                            class="home-social-icon footer-icon" id="insta"><i
+                                class="fa-brands fa-instagram"></i></a></span>
+                    <a href="https://www.linkedin.com/in/lokeshazad10" target="_blank"
+                        class="home-social-icon footer-icon" id="linkedin"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://www.github.com/lokeshazad10" target="_blank" class="home-social-icon footer-icon"
+                        id="github"><i class="fa-brands fa-github"></i></a>
                 </div>
                 <span class="footer-copy">© Lokesh Azad. All rigths reserved</span>
             </div>
         </footer>
     </div>
 
-    <script src="./js files/theme-toggle.js"></script>
-    <script type="text/javascript"
-        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
-</script>
-<script type="text/javascript">
-   (function(){
-      emailjs.init({
-        publicKey: "_M16benUw1LLbQSIQ",
-      });
-   })();
-</script>
-<script src="./js files/emailsender.js"></script>
-<script src="./script.js"></script>
+    <script src="./javascripts/theme-toggle.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+        (function () {
+            emailjs.init({
+                publicKey: "_M16benUw1LLbQSIQ",
+            });
+        })();
+    </script>
+    <script src="./javascripts/emailsender.js"></script>
+    <script src="./script.js"></script>
 </body>
+
 </html>
